[package]
name = "cli-tool"
version = "1.0.0"
edition = "2021"
authors = ["hamisionesmus"]
description = "High-performance CLI processing tool"
license = "MIT"
repository = "https://github.com/hamisionesmus/project3"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.0"